# UMA-code-demo

./: README.md
freewillai/: .gitattributes  .gitignore  README.md  anvil.contracts.env  anvil_workers.json  configs.json  contracts.env  dagger.env  demo.env  demo.ipynb  demo.py  demo_repl.env  deploy  docker-compose.yaml  docker-manager  foundry.toml  goerli.env  networks.json  pyproject.toml  repl.requirements.txt  repl.requirements2.txt  repl.requirements3.txt  requirements.txt  sepolia.env  server_workers.json  server_workers.yaml  setup.cfg  setup.py  setup.sh  temp.py  testnet_workers.json  worker1.env  worker2.env  worker3.env  zksync_workers.yaml
freewillai/containers/: anvil.dockerfile  dagger.private_keys.txt  ipfs-config  node.dockerfile  repl.dockerfile  repl2.dockerfile
freewillai/contracts/: FreeWillAIToken.sol  FreeWillAITokenABI.json  README.md  TaskRunner.sol  TaskRunnerABI.json  TaskRunnerReadMe.md  Utils.sol
freewillai/freewillai/: __init__.py  common.py  constants.py  contract.py  converter.py  core.py  doctypes.py  exceptions.py  globals.py  node.py  transforms.py  utils.py
freewillai/scripts/: build_repl.sh  cp_abi.py  deploy_contracts.s.sol  deploy_contracts.sh  deploy_contracts_on_anvil.sh  deploy_contracts_v2.sh  exec_code.py  exec_code.sh  generate_keypairs.py  get_anvil_envfile.py  install_ipfs.sh  load_env.py  mint.sh  mint_fwai.sh  node.py  pipelines.py  run_anvil.sh  run_demo.sh  run_ipfs.sh  run_node.sh  run_node1.sh  run_node2.sh  setup_anvil.sh  simple_test.py  start_demo.sh  token_initialize.py  token_owner.py
(+113 files in other folders)
